--- a/css/catadores.css
+++ b/css/catadores.css
@@ -11,17 +11,18 @@ body {
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 2em;
     padding: 20px;
-    background-color: white;
+    background-color: #592175;
     border-bottom: 1px solid #ccc;
+    color: white;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 500;
 }
 
@@ -30,6 +31,7 @@ nav a {
     flex-direction: column;
     gap: 10px;
     font-size: 2em;
+    color: #592175;
     text-align: center;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -96,10 +98,17 @@ nav a {
     gap: 20px;
 }
 
+#izy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
+}
 footer {
     text-align: center;
     padding: 20px;
-    font-size: 0.9em;
-    background-color: white;
+    font-size: 1.3em;
+    background-color: #592175;
+    color: white;
     border-top: 1px solid #ccc;
 }
