--- a/css/educacao.css
+++ b/css/educacao.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #e6e6e6;
+    background-color: white;
 }
 
 nav {
@@ -15,13 +15,14 @@ nav {
     align-items: center;
     font-size: 2em;
     padding: 20px;
-    background-color: white;
+    background-color: #592175;
     border-bottom: 1px solid #ccc;
+    color: white;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 500;
 }
 
@@ -34,9 +35,28 @@ main {
 }
 
 /* título da área educativa */
-main section{
+#titulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     text-align: center;
     font-size: 1.5em;
+    gap: 30px;
+    margin-bottom: 30px;
+}
+
+#titulo h2{
+    background-color: #592175;
+    color: white;
+    padding: 16px;
+    border: 8px solid #25A85A;
+    border-radius: 20px;
+    width: 622px;
+    height: 105px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 /* seções que contêm os cards */
@@ -44,7 +64,8 @@ main section{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 20px;
+    gap: 180px;
+    margin-bottom: 30px;
 }
 .sla a{
     text-decoration: none;
@@ -53,32 +74,36 @@ main section{
 /* card de conteúdo */
 article.conteudo {
     background-color: white;
-    width: 350px;
-    height: auto;
-    border: 1px solid black;
-    border-radius: 8px;
-    padding: 20px;
+    width: 401px;
+    height: 426px;
+    border: 10px solid #25A85A;
+    border-radius: 20px;
+    padding: 16px;
     text-align: center;
     font-size: 1.2em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: space-evenly;
     gap: 10px;
 }
 
 /* seção do quiz */
 #quiz {
-    border: 1px solid black;
-    background-color: white;
+    border: 16px solid #38ad67;
+    background-color: #388557;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content:space-evenly;
+    width: 929px;
+    height: 120px;
     gap: 20px;
-    padding: 30px;
+    padding: 50px;
     font-size: 1.3em;
     max-width: 800px;
-    border-radius: 8px;
+    border-radius: 20px;
+    color: white;
 }
 
 #quiz img {
@@ -86,24 +111,37 @@ article.conteudo {
 }
 
 #quiz a {
+    text-align: center;
+    font-size: medium;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     text-decoration: none;
     font-weight: bold;
-    color: black;
-    background-color: #e6e6e6;
-    border: 1px solid black;
-    padding: 15px 25px;
-    border-radius: 5px;
+    color: white;
+    background-color: #592175;
+    border: 5px solid white;
+    padding: 16px;
+    border-radius: 20px;
+    width: 158px;
+    height: 21px;
 }
 
 #quiz a:hover {
     background-color: black;
     color: #e6e6e6;
 }
-
+#izy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
+}
 footer {
     text-align: center;
     padding: 20px;
-    font-size: 0.9em;
-    background-color: white;
+    font-size: 1.3em;
+    background-color: #592175;
+    color: white;
     border-top: 1px solid #ccc;
 }
