--- a/css/separacao.css
+++ b/css/separacao.css
@@ -6,8 +6,9 @@
 }
 
 body {
-    background-color: #e6e6e6;
+    background-color: white;
 }
+
 
 nav {
     display: flex;
@@ -15,13 +16,14 @@ nav {
     align-items: center;
     font-size: 2em;
     padding: 20px;
-    background-color: white;
+    background-color: #592175;
     border-bottom: 1px solid #ccc;
+    color: white;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 500;
 }
 
@@ -33,8 +35,9 @@ nav a {
 }
 
 #textos-inicio {
+    color: #592175;
+    text-align: center;
     font-size: 2em;
-    margin-bottom: 10px;
     margin-left: 30px;
     margin-right: 20px;
 }
@@ -47,13 +50,13 @@ nav a {
 .lixo {
     display: flex;
     flex-direction: column;
-    border: 1px solid black;
+    border: 10px solid black;
     width: 360px;
     align-items: center;
     justify-content: center;
     text-align: center;
-    border-radius: 5px;
-    padding: 30px;
+    border-radius: 20px;
+    padding: 16px;
     font-size: 1.2em;
     margin-bottom: 10px;
 }
@@ -66,12 +69,14 @@ nav a {
 }
 
 .dica-texto {
+    color: #592175;
+    background-color: #ebebeb;
     padding: 10px;
     font-size: 2.1em;
     margin-left: 35px;
     text-align: center;
     border: 1px solid black;
-    border-radius: 5px;
+    border-radius: 25px;
 }
 
 .dica-texto ul {
@@ -82,10 +87,20 @@ nav a {
     margin-top: 40px;
     margin-right: 50px;
 }
+#izy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
+}
 footer {
     text-align: center;
     padding: 20px;
-    font-size: 0.9em;
-    background-color: white;
+    font-size: 1.3em;
+    background-color: #592175;
+    color: white;
     border-top: 1px solid #ccc;
+}
+span{
+    color: red;
 }
