Estilização quase completa area educativa

--- a/css/catadores.css
+++ b/css/catadores.css
@@ -39,7 +39,8 @@ nav a {
 
 .conjunto {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 50px;
     margin-bottom: 30px;
 }
 
@@ -47,12 +48,12 @@ nav a {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid black;
-    width: 855px;
-    height: 150px;
+    border: 10px solid #25A85A;
+    width: 687px;
+    height: 155px;
     text-align: center;
     padding: 30px;
-    font-size: 2.5em;
+    font-size: 2.3em;
     border-radius: 10px;
 }
 
@@ -61,6 +62,10 @@ nav a {
     display: flex;
     justify-content: center;
     height: 575px;
+    color: #592175;
+}
+span{
+    color: #25A85A;
 }
 
 .direitos {
