--- a/css/escolas.css
+++ b/css/escolas.css
@@ -6,28 +6,32 @@
 }
 
 body {
-    background-color: #e6e6e6;
+    background-color: white;
 }
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 2em;
     padding: 20px;
-    background-color: white;
+    background-color: #592175;
     border-bottom: 1px solid #ccc;
+    color: white;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 500;
 }
 
 #first {
+    margin-top: 50px;
     font-size: 2em;
     text-align: center;
+    color:#592175;
+
 }
 
 #videos {
@@ -36,6 +40,7 @@ nav a {
     justify-content: space-evenly;
     text-align: center;
     font-size: 1.5em;
+    font-weight: bold;
 }
 
 #cartilhas {
@@ -44,6 +49,7 @@ nav a {
 }
 
 .materiais {
+    border: 10px solid #25A85A;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -57,8 +63,32 @@ nav a {
     margin-right: 30px;
     margin-left: 30px;
 }
+.materiais-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+    padding: 10px;
+    font-size: 2.5em;
+    background-color: #592175;
+    color: white;
+    margin-right: 30px;
+    margin-left: 30px;
+}
+.materiais-2 a{
+    text-decoration: underline;
+    color: white;
+}
+span{
+    color: #592175;
+}
 #video-principal{
-   background-color: white; 
+   background-color: #592175; 
+   border: 10px solid #25A85A;
+   border-radius: 20px;
    font-size: 2.5em;
    display: flex;
    flex-direction: column;
@@ -67,9 +97,10 @@ nav a {
    text-align: center;
    margin-right: 30px;
     margin-left: 30px;
-    margin-top: 30px;
+    margin-top: 150px;
     border-radius: 10px;
     padding: 30px;
+    color: white;
 }
 #acao{
     display: flex;
@@ -77,13 +108,23 @@ nav a {
     align-items: center;
     text-align: center;
     font-size: 2em;
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 120px;
+    margin-bottom: 60px;
+}
+#acao h3{
+    color: #25A85A;
+}
+#izy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
 }
 footer {
     text-align: center;
     padding: 20px;
-    font-size: 0.9em;
-    background-color: white;
-    border-top: 1px solid #ccc;
+    font-size: 1.3em;
+    background-color: #592175;
+    color: white;
+    border-top: 1px solid #cccccc2a;
 }
