--- a/css/remuneracao.css
+++ b/css/remuneracao.css
@@ -6,32 +6,37 @@
 }
 
 body {
-    background-color: #e6e6e6;
+    background-color: white;
 }
 
 nav {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     font-size: 2em;
     padding: 20px;
-    background-color: white;
+    background-color: #592175;
     border-bottom: 1px solid #ccc;
+    color: white;
 }
 
 nav a {
     text-decoration: none;
-    color: black;
+    color: white;
     font-weight: 500;
 }
 
 #text-inicial {
+    background-color:#25A85A;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 2em;
     padding: 30px;
     text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 #impacto {
@@ -48,16 +53,27 @@ nav a {
     text-align: center;
     width: 50%;
     font-size: 1.9em;
+    color: #592175;
 }
 
+#izy{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 100px;
+}
 footer {
     text-align: center;
     padding: 20px;
-    font-size: 0.9em;
-    background-color: white;
+    font-size: 1.3em;
+    background-color: #592175;
+    color: white;
     border-top: 1px solid #ccc;
 }
+
 #video-principal{
+    background-color: #25A85A;
+    color: white;
     font-size: 1.9em;
     display: flex;
     flex-direction: column;
@@ -71,4 +87,5 @@ footer {
     flex-direction: column;
     font-size: 1.9em;
     align-items: center;
+    padding: 30px;
 }
